--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
   },
   "scripts": {
